fix: use css class to display actions on mobile

--- a/src/overlays/Modal.scss
+++ b/src/overlays/Modal.scss
@@ -25,6 +25,8 @@
   --overflow: auto;
   --width: 100vw;
   --modal-header-min-height: auto;
+  --actions-display-mobile: none;
+  --actions-display-desktop: inherit;
 
   overflow: var(--overflow);
   -webkit-overflow-scrolling: touch;
@@ -124,3 +126,20 @@
   justify-content: center;
   min-height: var(--bloom-s48);
 }
+
+.modal__footer-desktop {
+  display: none;
+
+  @media (min-width: $screen-md) {
+    display: var(--actions-display-desktop);
+  }
+}
+
+.modal__footer-mobile {
+  display: inherit;
+
+  @media (min-width: $screen-md) {
+    display: var(--actions-display-mobile);
+  }
+}
+
